pwned-password/prod/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: pwned-passwords-prod
  labels:
    io.kompose.service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - name: redis
          image: abc.docker-registry.gewis.nl/web/pwned-passwords/redis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - incr
                - ping
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
