pwned-password/prod/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pwned-passwords-prod
  labels:
    io.kompose.service: api
spec:
  selector:
    io.kompose.service: api
  ports:
    - name: "8000"
      port: 8000
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pwned-passwords-prod
  labels:
    io.kompose.service: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - name: "6379"
      port: 6379
      protocol: TCP
      targetPort: 6379
